Fixed root software update mechanism